test/compile_error/badconfname.conf.def
config 123_conf
{
	foo : int;
}
